test-suite/for-in/typecheck/pass/for_in_range_step_typed.first
interaction main() -> Unit {
  for i in 0, 2..=8 {
    let _: Int = i;
  };
  return;
}
