test-suite/for-in/typecheck/fail/for_in_array_element_wrong_type.first
import * "Prelude"
interaction main() -> Unit {
  let a: Array<Int> = [1, 2, 3];
  for x in a {
    let y: String = x;
  };
  return;
}
